# bike_demand_predictor

./: .gitignore  ABOUT_STRUCTURE.md  README.md  app.py  constraints.txt  find_packages.py  pyroject.toml  render.yaml  requirements.txt  setup.cfg  setup.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
database/processed/: preprocessor.pkl
database/raw/: raw.csv  test.csv  train.csv
models/: trained_model.pkl
notebooks/: best_model.ipynb
notebooks/EDA/: EDA.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/bike_sharing_ml/data/: data_ingestion.py  dataset.py  model_train.py  preprocess.py
src/bike_sharing_ml/utils/: exception.py  logger.py  utils.py
templates/: index.html  index1.html  predict.html  script.js  style.css
tests/: test.ipynb
