[metadata]
name = bike_sharing_ml
version = 0.1.0
description = Seoul Bike Sharing Demand Predictor
author = Jamshid Ganiev
author_email = jrganiev@gmail.com
# license = MIT AND (Apache-2.0 OR BSD-2-Clause)
url = https://github.com/jackhuntersys/bike_sharing_ml
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    # Add your project's requirements here
package_dir = 
    = .
     # This indicates that the package is in the "src" directory. If your package is in the current directory, you can use "." instead.
include_package_data = true


[options.packages.find]
where = .
 
exclude =
    tests*

[options.extras_require]
dev =
    pytest
    black
    flake8
    isort

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist

[isort]
profile = black






